src/test/wacc/invalid/whack/q8.wacc
# how much wacc could a whack wacc whack,
# if a whack wacc could whack wacc
begin
    int f() is
        return;
        int x = x;
        if x < x then return 5
        else          return 6;
        fi
    end
end
